force-app/main/default/objects/DocumentoFirmado__e/DocumentoFirmado__e.object-meta.xml
<CustomObject>
    <description>Evento de plataforma que se encarga de recibir las notificaciones de documentos firmados desde AWS</description>
    <label>Documento Firmado</label>
    <pluralLabel>Documentos Firmados</pluralLabel>
</CustomObject>