force-app/main/default/objects/DocumentoFirmado__e/fields/ContratoId__c.field-meta.xml
<CustomField>
    <fullName>ContratoId__c</fullName>
    <description>Id del Contrato</description>
    <label>Contrato ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>