force-app/main/default/objects/DocumentoFirmado__e/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado de firma del documento</description>
    <label>Estado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>