force-app/main/default/objects/DocumentoFirmado__e/fields/ExternalTransactionId__c.field-meta.xml
<CustomField>
    <fullName>ExternalTransactionId__c</fullName>
    <description>ID Externo de la transacción</description>
    <label>External Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>