force-app/main/default/objects/DocumentoFirmado__e/fields/FechaFirma__c.field-meta.xml
<CustomField>
    <fullName>FechaFirma__c</fullName>
    <description>Fecha/Hora de firma del documento</description>
    <label>Fecha Firma</label>
    <type>DateTime</type>
</CustomField>