force-app/main/default/objects/DocumentoFirmado__e/fields/PdfFirmadoUrl__c.field-meta.xml
<CustomField>
    <fullName>PdfFirmadoUrl__c</fullName>
    <description>URL del Documento Firmado</description>
    <label>PDF Firmado URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>