force-app/main/default/objects/DocumentoFirmado__e/fields/RawPayload__c.field-meta.xml
<CustomField>
    <fullName>RawPayload__c</fullName>
    <description>Json Completo de AWS</description>
    <label>Raw Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>